@@ -6,6 +6,7 @@ afex_plot_internal <- function(x,
                                data,
                                error_plot,
                                error_arg, 
+                               error_linetype,
                                dodge, 
                                data_plot,
                                data_geom,
@@ -28,6 +29,7 @@ afex_plot_internal <- function(x,
                               data = data,
                               error_plot = error_plot,
                               error_arg = error_arg, 
+                              error_linetype = error_linetype,
                               dodge = dodge, 
                               data_plot = data_plot,
                               data_geom = data_geom,
