@@ -14,38 +14,40 @@ afex_plot(object, ...)
 
 \method{afex_plot}{afex_aov}(object, x, trace, panel, mapping,
   error = "model", error_ci = TRUE, error_level = 0.95,
-  error_arg = list(width = 0), data_plot = TRUE, data_geom,
-  data_alpha = 0.5, data_arg = list(color = "darkgrey"),
-  point_arg = list(), line_arg = list(), emmeans_arg = list(),
-  dodge = 0.5, return = "plot", factor_levels = list(), legend_title,
-  ...)
+  error_arg = list(width = 0), error_linetype = TRUE,
+  data_plot = TRUE, data_geom, data_alpha = 0.5,
+  data_arg = list(color = "darkgrey"), point_arg = list(),
+  line_arg = list(), emmeans_arg = list(), dodge = 0.5,
+  return = "plot", factor_levels = list(), legend_title, ...)
 
 \method{afex_plot}{mixed}(object, x, trace, panel, mapping, id,
   error = "model", error_ci = TRUE, error_level = 0.95,
-  error_arg = list(width = 0), data_plot = TRUE, data_geom,
-  data_alpha = 0.5, data_arg = list(color = "darkgrey"),
-  point_arg = list(), line_arg = list(), emmeans_arg = list(),
-  dodge = 0.5, return = "plot", factor_levels = list(), legend_title,
-  ...)
+  error_arg = list(width = 0), error_linetype = TRUE,
+  data_plot = TRUE, data_geom, data_alpha = 0.5,
+  data_arg = list(color = "darkgrey"), point_arg = list(),
+  line_arg = list(), emmeans_arg = list(), dodge = 0.5,
+  return = "plot", factor_levels = list(), legend_title, ...)
 
 \method{afex_plot}{merMod}(object, x, trace, panel, mapping, id,
   error = "model", error_ci = TRUE, error_level = 0.95,
-  error_arg = list(width = 0), data_plot = TRUE, data_geom,
-  data_alpha = 0.5, data_arg = list(color = "darkgrey"),
-  point_arg = list(), line_arg = list(), emmeans_arg = list(),
-  dodge = 0.5, return = "plot", factor_levels = list(), legend_title,
-  ...)
+  error_arg = list(width = 0), error_linetype = TRUE,
+  data_plot = TRUE, data_geom, data_alpha = 0.5,
+  data_arg = list(color = "darkgrey"), point_arg = list(),
+  line_arg = list(), emmeans_arg = list(), dodge = 0.5,
+  return = "plot", factor_levels = list(), legend_title, ...)
 
 \method{afex_plot}{default}(object, x, trace, panel, mapping, id, dv, data,
   within_vars, between_vars, error = "model", error_ci = TRUE,
-  error_level = 0.95, error_arg = list(width = 0), data_plot = TRUE,
-  data_geom, data_alpha = 0.5, data_arg = list(color = "darkgrey"),
+  error_level = 0.95, error_arg = list(width = 0),
+  error_linetype = TRUE, data_plot = TRUE, data_geom,
+  data_alpha = 0.5, data_arg = list(color = "darkgrey"),
   point_arg = list(), line_arg = list(), emmeans_arg = list(),
   dodge = 0.5, return = "plot", factor_levels = list(), legend_title,
   ...)
 
 interaction_plot(means, data, mapping = c("shape", "lineytpe"),
-  error_plot = TRUE, error_arg = list(width = 0), data_plot = TRUE,
+  error_plot = TRUE, error_arg = list(width = 0),
+  error_linetype = TRUE, data_plot = TRUE,
   data_geom = ggplot2::geom_point, data_alpha = 0.5,
   data_arg = list(color = "darkgrey"), point_arg = list(),
   line_arg = list(), dodge = 0.5, legend_title, col_x = "x",
@@ -102,6 +104,10 @@ interval.}
 \code{\link[ggplot2]{geom_errorbar}}, which draws the errorsbars. Default 
 is \code{list(width = 0)} which suppresses the vertical bars at the end of 
 the error bar.}
+
+\item{error_linetype}{Logical. If \code{TRUE}, the default, a potential
+\code{"linetype"} \code{mapping} is also applied to error bars. If
+\code{FALSE}, error bars are always plotted as solid lines.}
 
 \item{data_plot}{\code{logical}. Should raw data be plotted in the 
 background? Default is \code{TRUE}.}
