@@ -216,6 +216,27 @@ p5 <- afex_plot(aw, x = "noise", trace = "angle", error = "within", dodge = 0.7,
 plot_grid(p2, p3, p4, p5, ncol = 2, labels = 2:5) 
 ```
 
+## Plotting Order and Error Bars
+
+For graphical element in the foreground, `afex_plot` first plots all graphical elements belonging to the same factor level before plotting graphical elements belonging to a different factor level. This provides a consistent graphical impression for each factor level that is particularly relevant in case color is mapped.
+
+In case in which we have overlapping lines and error bars, we also sometimes do not want that the error bars also receives different line types. This can be controlled with the `error_linetype`. If `FALSE` as in the left plot, error bars are always shown as solid lines.
+
+```{r fig.width=8.5, fig.height=4, dpi = 150}
+p1 <- afex_plot(aw, x = "noise", trace = "angle", mapping = "color", 
+                point_arg = list(size = 5), 
+                error_arg = list(size = 2), 
+                line_arg = list(size = 2))
+p2 <- afex_plot(aw, x = "noise", trace = "angle", 
+                mapping = c("color", "shape", "linetype"), 
+                point_arg = list(size = 5), 
+                error_arg = list(size = 2, width = 0), 
+                error_linetype = FALSE,
+                line_arg = list(size = 2))
+plot_grid(p1, p2, ncol = 2)
+```
+
+
 ## One-way Plots Without Trace Factor
 
 If `afex_plot` is called without a trace factor, a one-way plot is created. We can customize this plot in very much the same way. Per default a one-way plot contains a legend if `mapping` is not empty (i.e., `""`). We show this legend for the left plot, but suppress it for the right one.
